wwr/styles/rafting.css
:root {
    --primary-color: #000080;
    --secondary-color: #013220;
    --accent1-color: #264653;
    --accent2-color: #eee;
    --heading-font: "Times New Roman", "Georgia", serif;
    --body-font: arial, helvetica, sans-serif;
    --text-color-1: #000000;
    --text-color-2: #fff;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}

body {
    font-family: var(--body-font);
    color: var(--accent2-color);
}

header,
main,
footer {
    width: 840px;
    margin: 0 auto;
}

header {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;

}

.navigation {
    display: flex;
    list-style: none;
    background-color: var(--primary-color);
}

.navigation li {
    flex: 1 1 auto;
    background-color: var(--text-color-2);
    margin: 0 auto;
    display: block;
    border-radius: .5rem;
    padding: .5rem;
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;
}

.socialmedia a {
    text-decoration: none;
}

.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;

}

.hero h1 {
    position: absolute;
    top: 20px;
    left: 0px;
    width: 100%;
    padding: 25px;
    text-align: center;
    opacity: 0.7;
    background-color: var(--secondary-color);
    color: var(--text-color-2);
    font-family: var(--heading-font);
}

h2 {

    top: 20px;
    left: -15px;
    width: 100%;
    padding: 25px;
    text-align: center;
    opacity: 0.7;
    background-color: var(--primary-color);
    color: var(--text-color-2);
    font-family: var(--heading-font);
}

.hero article {
    position: absolute;
    margin: 16px;
    padding: 8px;
    top: 300px;
    background-color: var(--accent1-color);
}

.hero article img {
    float: right;
    width: 125px;
}

section {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    flex-wrap: wrap;
}

section p {
    max-width: 200px;
    height: auto;
    color: var(--text-color-1);
}

.adventure {
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
    grid-template-rows: 1fr 1fr 1fr;
}

.adventure h2 {
    top: 20px;
    left: -15px;
    width: 100%;
    padding: 25px;
    text-align: center;
    opacity: 0.7;
    background-color: var(--primary-color);
    color: var(--text-color-2);
    font-family: var(--heading-font);
    order: 0;
    grid-column: 1/6;
}

.adventure img {
    width: 125px;
    height: auto;
}

.adventure figcaption {
    order: 2;
    color: var(--primary-color);
    padding: 15px;
}

footer nav a img {
    width: 50px;
    height: auto;
}

footer {
    background-color: var(--primary-color);
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
}

footer nav {
    display: flex;
    list-style: none;
}

footer a {
    flex: 1 1 auto;
    padding: 20px;
}

.info {
    display: flex;
    flex-direction: column;
    color: var(--text-color-1);
}

.history {
    color: var(--text-color-1);
}

.history img {
    max-width: 150px;
    height: auto;
}

.contact {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    color: var(--text-color-1);
}

